<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
    tools:context="ir.dpi.cap.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/mainpic"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignUp"
            android:text="@string/activity_main_btn_SignUp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:text="@string/activity_main_btn_login"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:id="@+id/txtViewEnLan"
            android:text="@string/activity_main_txtView_EnLan"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:id="@+id/txtViewFaLan"
            android:text="@string/activity_main_txtView_FaLan"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center"
            android:textColor="@color/colorBlack"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

</LinearLayout>
