<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorWhite">
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        tools:context="ir.dpi.cap.MapsActivity"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/llCarNum">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:id="@+id/txtCarNum"/>
        <TextView
            android:id="@+id/distance_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/activity_maps_txtCarNum"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        android:layout_margin="4dp"
        android:id="@+id/view1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/llSource">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:id="@+id/txtSource" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/activity_maps_txtSource"/>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        android:layout_margin="4dp"
        android:id="@+id/view2"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/llDest">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:id="@+id/txtDest" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/activity_maps_txtDest"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/llRequest"
        android:background="@color/colorDarkBlue"
        android:orientation="horizontal"
        >

        <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="2"/>-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/activity_maps_txtWating"
            android:background="#cccccc"
            android:textColor="#ff751a"
            android:id="@+id/txtWaiting"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:visibility="gone"
          />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:text="@string/activity_maps_btnRequest"
            android:background="#b30000"
            android:textColor="@color/colorWhite"
            android:id="@+id/btnRequest"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:text="@string/activity_maps_btnReject"
        android:background="#b30000"
        android:textColor="@color/colorWhite"
        android:id="@+id/btnReject"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:visibility="gone"/>
        <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:id="@+id/txttimer"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="2"-->
            <!--android:background="@color/colorGreenBlue"-->
            <!--android:textColor="@color/colorWhite"/>-->
        <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="2"/>-->
    </LinearLayout>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:name="ir.dpi.cap.DriverFragment"
        android:id="@+id/fragDriver"
        android:layout_weight="1"
        android:visibility="gone"
        android:background="@color/colorGreenBlue"
        />
</LinearLayout>

